feat: expand autogenerated base mock classes and update metadata resources