@@ -1,6 +1,5 @@
 package org.mockbukkit.mockbukkit.inventory.meta;
 
-import com.destroystokyo.paper.Namespaced;
 import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -9,15 +8,12 @@ import com.google.common.collect.ImmutableSortedMap;
 import com.google.common.collect.LinkedHashMultimap;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.SetMultimap;
-import com.google.common.collect.Sets;
-import io.papermc.paper.registry.set.RegistryKeySet;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.serializer.bungeecord.BungeeComponentSerializer;
 import net.kyori.adventure.text.serializer.gson.GsonComponentSerializer;
 import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import net.md_5.bungee.api.chat.BaseComponent;
 import org.bukkit.Bukkit;
-import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 import org.bukkit.Registry;
 import org.bukkit.Tag;
@@ -39,12 +35,10 @@ import org.bukkit.inventory.meta.components.FoodComponent;
 import org.bukkit.inventory.meta.components.JukeboxPlayableComponent;
 import org.bukkit.inventory.meta.components.ToolComponent;
 import org.bukkit.inventory.meta.components.UseCooldownComponent;
-import org.bukkit.inventory.meta.tags.CustomItemTagContainer;
 import org.bukkit.persistence.PersistentDataContainer;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.mockbukkit.mockbukkit.exception.UnimplementedOperationException;
 import org.mockbukkit.mockbukkit.inventory.SerializableMeta;
 import org.mockbukkit.mockbukkit.inventory.meta.components.CustomModelDataComponentMock;
 import org.mockbukkit.mockbukkit.inventory.meta.components.EquippableComponentMock;
@@ -54,7 +48,6 @@ import org.mockbukkit.mockbukkit.inventory.meta.components.ToolComponentMock;
 import org.mockbukkit.mockbukkit.inventory.meta.components.UseCooldownComponentMock;
 import org.mockbukkit.mockbukkit.persistence.PersistentDataContainerMock;
 import org.mockbukkit.mockbukkit.util.NbtParser;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -68,81 +61,171 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-
 import static java.util.Objects.nonNull;
 
 /**
- * Mock implementation of an {@link ItemMeta}, {@link Damageable}, and {@link Repairable}.
+ * Mock implementation of an {@link ItemMeta}, {@link Damageable}, and
+ * {@link Repairable}.
  */
-@SuppressWarnings("UnstableApiUsage")
+@SuppressWarnings(
+{"deprecation", "removal"})
 @DelegateDeserialization(SerializableMeta.class)
-public class ItemMetaMock implements ItemMeta, Damageable, Repairable
+public class ItemMetaMock
+		implements
+			Damageable,
+			Repairable,
+			org.mockbukkit.mockbukkit.generated.org.bukkit.inventory.meta.ItemMetaBaseMock
 {
+
 	public static final String ATTRIBUTE_MODIFIERS = "attribute-modifiers";
+	private static final String ATTRIBUTE_CANNOT_BE_NULL = "Attribute cannot be null";
+
 	public static final String BLOCK_DATA = "BlockStateTag";
+
 	public static final String CUSTOM_MODEL_DATA = "custom-model-data";
+
 	public static final String DAMAGE = "Damage";
+
 	public static final String DAMAGE_RESISTANT = "damage-resistant";
+
 	public static final String DISPLAY_NAME = "display-name";
+
 	public static final String ENCHANTABLE = "enchantable";
+
 	public static final String ENCHANTMENT_GLINT_OVERRIDE = "enchantment-glint-override";
+
 	public static final String ENCHANTMENTS = "enchantments";
+
 	public static final String EQUIPPABLE = "equippable";
+
 	public static final String FIRE_RESISTANT = "FireResistant";
+
 	public static final String FOOD = "food";
+
 	public static final String GLIDER = "glider";
+
 	public static final String HIDE_TOOLTIP = "HideTooltip";
+
 	public static final String ITEM_FLAGS = "ItemFlags";
+
 	public static final String ITEM_MODEL = "item-model";
+
 	public static final String ITEM_NAME = "item-name";
+
 	public static final String JUKEBOX_PLAYABLE = "jukebox-playable";
-	public static final String LORE = "lore";
+
+	public static final String LORE_KEY = "lore";
+
 	public static final String MAX_DAMAGE = "max-damage";
+
 	public static final String MAX_STACK_SIZE = "max-stack-size";
+
 	public static final String META_TYPE = "meta-type";
+
 	public static final String PUBLIC_BUKKIT_VALUES = "PublicBukkitValues";
+
 	public static final String RARITY = "rarity";
+
 	public static final String REPAIR_COST = "repair-cost";
+
 	public static final String TOOL = "tool";
+
 	public static final String TOOL_TIP_STYLE = "tool-tip-style";
+
 	public static final String UNBREAKABLE = "Unbreakable";
+
 	public static final String USE_COOLDOWN = "use-cooldown";
+
 	public static final String USE_REMAINDER = "use-remainder";
 
 	private static final int ABSOLUTE_MAX_STACK_SIZE = 99;
 
-	// We store the raw JSON representation of all text data. See SPIGOT-5063, SPIGOT-5656, SPIGOT-5304
-	private @Nullable String displayName = null;
-	private @Nullable List<String> lore = null;
-	private @Nullable Integer damage = null;
-	private @Nullable Integer maxDamage;
-	private int repairCost = 0;
-	private @NotNull Map<Enchantment, Integer> enchants = new HashMap<>();
-	private @NotNull Multimap<Attribute, AttributeModifier> attributeModifiers = LinkedHashMultimap.create();
-	private @NotNull Set<ItemFlag> hideFlags = EnumSet.noneOf(ItemFlag.class);
-	private @NotNull PersistentDataContainerMock persistentDataContainer = new PersistentDataContainerMock();
-	private boolean unbreakable = false;
-	private @Nullable Integer customModelData = null;
-	private boolean hideTooltip;
-	private boolean fireResistant;
-	private boolean glider;
-	private @Nullable Integer maxStackSize = null;
-	private @Nullable Boolean enchantmentGlintOverride = null;
-	private @Nullable ItemRarity rarity;
-	private @Nullable Component itemName = null;
-	private @Nullable Integer enchantable;
-	private @Nullable ItemStack useRemainder;
-	private @Nullable NamespacedKey itemModel;
-	private @Nullable NamespacedKey tooltipStyle;
-	private @Nullable NamespacedKey damageResistant;
+	// We store the raw JSON representation of all text data. See SPIGOT-5063,
+	// SPIGOT-5656, SPIGOT-5304
+	@Nullable
+	private String displayNameData = null;
 
-	private @Nullable CustomModelDataComponent customModelDataComponent;
-	private @Nullable UseCooldownComponent useCooldown;
-	private @Nullable FoodComponent foodComponent;
-	private @Nullable ToolComponent toolComponent;
-	private @Nullable EquippableComponent equippableComponent;
-	private @Nullable JukeboxPlayableComponent jukeboxPlayableComponent;
-	private @Nullable Map<String, String> blockData = null;
+	@Nullable
+	private List<String> loreData = null;
+
+	@Nullable
+	private Integer damageData = null;
+
+	@Nullable
+	private Integer maxDamage;
+
+	private int repairCost = 0;
+
+	@NotNull
+	private Map<Enchantment, Integer> enchants = new HashMap<>();
+
+	@NotNull
+	private Multimap<Attribute, AttributeModifier> attributeModifiers = LinkedHashMultimap.create();
+
+	@NotNull
+	private Set<ItemFlag> hideFlags = EnumSet.noneOf(ItemFlag.class);
+
+	@NotNull
+	private PersistentDataContainerMock persistentDataContainer = new PersistentDataContainerMock();
+
+	private boolean unbreakableData = false;
+
+	@Nullable
+	private Integer customModelDataData = null;
+
+	private boolean hideTooltip;
+
+	private boolean fireResistant;
+
+	private boolean gliderData;
+
+	@Nullable
+	private Integer maxStackSizeData = null;
+
+	@Nullable
+	private Boolean enchantmentGlintOverride = null;
+
+	@Nullable
+	private ItemRarity rarityData;
+
+	@Nullable
+	private Component itemNameData = null;
+
+	@Nullable
+	private Integer enchantableData;
+
+	@Nullable
+	private ItemStack useRemainder;
+
+	@Nullable
+	private NamespacedKey itemModel;
+
+	@Nullable
+	private NamespacedKey tooltipStyle;
+
+	@Nullable
+	private NamespacedKey damageResistant;
+
+	@Nullable
+	private CustomModelDataComponent customModelDataComponent;
+
+	@Nullable
+	private UseCooldownComponent useCooldown;
+
+	@Nullable
+	private FoodComponent foodComponent;
+
+	@Nullable
+	private ToolComponent toolComponent;
+
+	@Nullable
+	private EquippableComponent equippableComponent;
+
+	@Nullable
+	private JukeboxPlayableComponent jukeboxPlayableComponent;
+
+	@Nullable
+	private Map<String, String> blockData = null;
 
 	/**
 	 * Constructs a new {@link ItemMetaMock}.
@@ -154,27 +237,46 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	/**
 	 * Constructs a new {@link ItemMetaMock}, copying the data from another.
 	 *
-	 * @param meta The meta to copy.
+	 * @param meta
+	 *            The meta to copy.
 	 */
 	public ItemMetaMock(@NotNull ItemMeta meta)
 	{
+		copyDisplayNameAndLore(meta);
+		copyDamageAndRepair(meta);
+		copyEnchantsAndModifiers(meta);
+		copyFlagsAndPDC(meta);
+		copyMiscellaneous(meta);
+		copyComponents(meta);
+	}
+
+	private void copyDisplayNameAndLore(@NotNull ItemMeta meta)
+	{
 		if (meta.hasDisplayName())
 		{
-			displayName = GsonComponentSerializer.gson().serialize(meta.displayName());
+			displayNameData = GsonComponentSerializer.gson().serialize(meta.displayName());
 		}
 		if (meta.hasLore())
 		{
-			lore = meta.lore().stream().map(c -> GsonComponentSerializer.gson().serialize(c)).collect(Collectors.toList());
+			loreData = meta.lore().stream().map(c -> GsonComponentSerializer.gson().serialize(c)).toList();
 		}
+	}
+
+	private void copyDamageAndRepair(@NotNull ItemMeta meta)
+	{
 		if (meta instanceof Damageable d)
 		{
-			this.damage = d.hasDamageValue() ? d.getDamage() : null;
+			this.damageData = d.hasDamageValue() ? d.getDamage() : null;
 			this.maxDamage = d.hasMaxDamage() ? d.getMaxDamage() : null;
 		}
 		if (meta instanceof Repairable r)
 		{
 			this.repairCost = r.getRepairCost();
 		}
+	}
+
+	private void copyEnchantsAndModifiers(@NotNull ItemMeta meta)
+	{
 		if (meta.hasEnchants())
 		{
 			enchants = new HashMap<>(meta.getEnchants());
@@ -183,7 +285,10 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		{
 			this.attributeModifiers = LinkedHashMultimap.create(meta.getAttributeModifiers());
 		}
+	}
 
+	private void copyFlagsAndPDC(@NotNull ItemMeta meta)
+	{
 		var tmpHideFlags = meta.getItemFlags();
 		if (!tmpHideFlags.isEmpty())
 		{
@@ -193,13 +298,17 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		{
 			this.persistentDataContainer = new PersistentDataContainerMock(m.persistentDataContainer);
 		}
-		unbreakable = meta.isUnbreakable();
-		customModelData = meta.hasCustomModelData() ? meta.getCustomModelData() : null;
+	}
+
+	private void copyMiscellaneous(@NotNull ItemMeta meta)
+	{
+		unbreakableData = meta.isUnbreakable();
+		customModelDataData = meta.hasCustomModelData() ? meta.getCustomModelData() : null;
 		hideTooltip = meta.isHideTooltip();
 		fireResistant = meta.isFireResistant();
 		if (meta.hasMaxStackSize())
 		{
-			maxStackSize = meta.getMaxStackSize();
+			maxStackSizeData = meta.getMaxStackSize();
 		}
 		if (meta.hasEnchantmentGlintOverride())
 		{
@@ -207,15 +316,60 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		}
 		if (meta.hasRarity())
 		{
-			rarity = meta.getRarity();
+			rarityData = meta.getRarity();
 		}
 		if (meta.hasItemName())
 		{
-			itemName = meta.itemName();
+			itemNameData = meta.itemName();
 		}
 		if (meta.hasEnchantable())
 		{
-			enchantable = meta.getEnchantable();
+			enchantableData = meta.getEnchantable();
+		}
+		gliderData = meta.isGlider();
+	}
+
+	private void copyComponents(@NotNull ItemMeta meta)
+	{
+		if (meta.hasUseRemainder())
+		{
+			this.useRemainder = meta.getUseRemainder();
+		}
+		if (meta.hasItemModel())
+		{
+			this.itemModel = meta.getItemModel();
+		}
+		if (meta.hasTooltipStyle())
+		{
+			this.tooltipStyle = meta.getTooltipStyle();
+		}
+		if (meta.hasDamageResistant())
+		{
+			this.damageResistant = meta.getDamageResistant().getKey();
+		}
+		if (meta.hasUseCooldown())
+		{
+			this.useCooldown = meta.getUseCooldown();
+		}
+		if (meta.hasFood())
+		{
+			this.foodComponent = meta.getFood();
+		}
+		if (meta.hasTool())
+		{
+			this.toolComponent = meta.getTool();
+		}
+		if (meta.hasEquippable())
+		{
+			this.equippableComponent = meta.getEquippable();
+		}
+		if (meta.hasJukeboxPlayable())
+		{
+			this.jukeboxPlayableComponent = meta.getJukeboxPlayable();
+		}
+		if (meta instanceof ItemMetaMock m && m.hasBlockData())
+		{
+			this.blockData = new HashMap<>(m.getBlockData());
 		}
 	}
 
@@ -225,9 +379,7 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		{
 			return false;
 		}
-
 		Iterator<Enchantment> var2 = enchantments.keySet().iterator();
-
 		Enchantment enchant;
 		do
 		{
@@ -236,135 +388,102 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 				return false;
 			}
 			enchant = var2.next();
-		}
-		while (!enchant.conflictsWith(ench));
-
+		} while (!enchant.conflictsWith(ench));
 		return true;
+	}
+
+	@Override
+	public boolean hasDisplayName()
+	{
+		return this.displayNameData != null;
 	}
 
 	@Override
 	public boolean hasCustomName()
 	{
-		return displayName != null;
+		return hasDisplayName();
 	}
 
 	@Override
-	public @Nullable Component customName()
+	@Nullable
+	public Component customName()
 	{
-		return displayName == null ? null : GsonComponentSerializer.gson().deserialize(displayName);
+		return displayNameData == null ? null : GsonComponentSerializer.gson().deserialize(displayNameData);
 	}
 
 	@Override
 	public void customName(@Nullable Component component)
 	{
-		this.displayName = component == null ? null : GsonComponentSerializer.gson().serialize(component);
+		this.displayNameData = component == null ? null : GsonComponentSerializer.gson().serialize(component);
 	}
 
 	@Override
-	public @NotNull String getDisplayName()
+	@NotNull
+	public String getDisplayName()
 	{
-		return this.displayName == null ? "" : LegacyComponentSerializer.legacySection().serialize(GsonComponentSerializer.gson().deserialize(this.displayName));
+		return this.displayNameData == null
+				? ""
+				: LegacyComponentSerializer.legacySection()
+						.serialize(GsonComponentSerializer.gson().deserialize(this.displayNameData));
+	}
+
+	/**
+	 * @deprecated Use {@link #displayName()} instead.
+	 */
+	@Override
+	@Deprecated(since = "1.16")
+	@NotNull
+	public BaseComponent @NotNull [] getDisplayNameComponent()
+	{
+		return BungeeComponentSerializer.get()
+				.serialize(GsonComponentSerializer.gson().deserialize(this.displayNameData));
 	}
 
 	@Override
-	public @NotNull BaseComponent @NotNull [] getDisplayNameComponent()
+	public void displayName(@Nullable net.kyori.adventure.text.Component displayName)
 	{
-		return BungeeComponentSerializer.get().serialize(GsonComponentSerializer.gson().deserialize(this.displayName));
+		this.displayNameData = displayName == null
+				? null
+				: net.kyori.adventure.text.serializer.gson.GsonComponentSerializer.gson().serialize(displayName);
+	}
+
+	@Override
+	@Nullable
+	public net.kyori.adventure.text.Component displayName()
+	{
+		return this.displayNameData == null
+				? null
+				: net.kyori.adventure.text.serializer.gson.GsonComponentSerializer.gson()
+						.deserialize(this.displayNameData);
 	}
 
 	@Override
 	public void setDisplayName(@Nullable String name)
 	{
-		this.displayName = name == null ? null : GsonComponentSerializer.gson().serialize(LegacyComponentSerializer.legacySection().deserialize(name));
+		this.displayNameData = name == null
+				? null
+				: GsonComponentSerializer.gson().serialize(LegacyComponentSerializer.legacySection().deserialize(name));
 	}
 
+	/**
+	 * @deprecated Use {@link #displayName(Component)} instead.
+	 */
 	@Override
-	public void setDisplayNameComponent(BaseComponent @NotNull [] components)
+	@Deprecated(since = "1.16")
+	public void setDisplayNameComponent(BaseComponent @Nullable [] components)
 	{
-		this.displayName = GsonComponentSerializer.gson().serialize(BungeeComponentSerializer.get().deserialize(Arrays.stream(components).filter(Objects::nonNull).toArray(BaseComponent[]::new)));
-	}
-
-	/**
-	 * Checks if this items lore is equal to some other lore.
-	 *
-	 * @param meta The other item meta whose lore should be compared.
-	 * @return {@code true} if they are the same, {@code false} if they're not.
-	 */
-	private boolean isLoreEquals(@NotNull ItemMeta meta)
-	{
-		if (lore == null)
-		{
-			return !meta.hasLore();
-		}
-		else if (!meta.hasLore())
-		{
-			return false;
-		}
-
-		List<Component> otherLore = meta.lore();
-		if (lore.size() == otherLore.size())
-		{
-			for (int i = 0; i < lore.size(); i++)
-			{
-				if (!GsonComponentSerializer.gson().deserialize(lore.get(i)).equals(otherLore.get(i)))
-				{
-					return false;
-				}
-			}
-			return true;
-		}
-		return false;
-	}
-
-	/**
-	 * Checks if the display name of this item meta is equal to the display name of
-	 * another one.
-	 *
-	 * @param meta The other item meta to check against.
-	 * @return {@code true} if both display names are equal, {@code false} if
-	 * they're not.
-	 */
-	private boolean isDisplayNameEqual(@NotNull ItemMeta meta)
-	{
-		if (displayName != null)
-		{
-			if (meta.hasDisplayName())
-			{
-				return GsonComponentSerializer.gson().deserialize(displayName).equals(meta.displayName());
-			}
-			else
-			{
-				return false;
-			}
-		}
-		else
-		{
-			return !meta.hasDisplayName();
-		}
+		this.displayNameData = GsonComponentSerializer.gson().serialize(BungeeComponentSerializer.get()
+				.deserialize(Arrays.stream(components).filter(Objects::nonNull).toArray(BaseComponent[]::new)));
 	}
 
 	@Override
 	public int hashCode()
 	{
-		return Objects.hash(
-				displayName,
-				lore,
-				damage,
-				repairCost,
-				enchants,
-				attributeModifiers,
-				hideFlags,
-				persistentDataContainer,
-				unbreakable,
-				customModelData,
-				maxDamage,
-				hideTooltip,
-				fireResistant,
-				maxStackSize,
-				enchantmentGlintOverride,
-				rarity,
-				itemName,
-				enchantable);
+		return Objects.hash(displayNameData, loreData, damageData, repairCost, enchants, attributeModifiers, hideFlags,
+				persistentDataContainer, unbreakableData, customModelDataData, maxDamage, hideTooltip, fireResistant,
+				gliderData, maxStackSizeData, enchantmentGlintOverride, rarityData, itemNameData, enchantableData,
+				useRemainder, itemModel, tooltipStyle, damageResistant, useCooldown, foodComponent, toolComponent,
+				equippableComponent, jukeboxPlayableComponent, blockData);
 	}
 
 	@Override
@@ -374,205 +493,146 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		{
 			return true;
 		}
-		if (!(obj instanceof ItemMeta meta))
+		if (obj == null || obj.getClass() != this.getClass())
 		{
 			return false;
 		}
+		ItemMetaMock meta = (ItemMetaMock) obj;
+		return isEquivalent(displayName(), meta.displayName()) && isEquivalent(lore(), meta.lore())
+				&& isEquivalent(damageData, meta.damageData) && isEquivalent(repairCost, meta.repairCost)
+				&& isEquivalent(enchants, meta.enchants) && isEquivalent(attributeModifiers, meta.attributeModifiers)
+				&& isEquivalent(hideFlags, meta.hideFlags)
+				&& isEquivalent(persistentDataContainer, meta.persistentDataContainer)
+				&& isEquivalent(unbreakableData, meta.unbreakableData)
+				&& isEquivalent(customModelDataData, meta.customModelDataData)
+				&& isEquivalent(maxDamage, meta.maxDamage) && isEquivalent(hideTooltip, meta.hideTooltip)
+				&& isEquivalent(fireResistant, meta.fireResistant) && isEquivalent(gliderData, meta.gliderData)
+				&& isEquivalent(maxStackSizeData, meta.maxStackSizeData)
+				&& isEquivalent(enchantmentGlintOverride, meta.enchantmentGlintOverride)
+				&& isEquivalent(rarityData, meta.rarityData) && isEquivalent(itemNameData, meta.itemNameData)
+				&& isEquivalent(enchantableData, meta.enchantableData) && isEquivalent(useRemainder, meta.useRemainder)
+				&& isEquivalent(itemModel, meta.itemModel) && isEquivalent(tooltipStyle, meta.tooltipStyle)
+				&& isEquivalent(damageResistant, meta.damageResistant) && isEquivalent(useCooldown, meta.useCooldown)
+				&& isEquivalent(foodComponent, meta.foodComponent) && isEquivalent(toolComponent, meta.toolComponent)
+				&& isEquivalent(equippableComponent, meta.equippableComponent)
+				&& isEquivalent(jukeboxPlayableComponent, meta.jukeboxPlayableComponent)
+				&& isEquivalent(blockData, meta.blockData);
+	}
 
-		if (obj instanceof Damageable damageable)
+	protected boolean isEquivalent(@Nullable Object o1, @Nullable Object o2)
+	{
+		if (o1 == o2)
 		{
-			if (hasDamage() != damageable.hasDamage() || hasDamage() && getDamage() != damageable.getDamage())
-			{
-				return false;
-			}
-			if (hasMaxDamage() != damageable.hasMaxDamage() || hasMaxDamage() && getMaxDamage() != damageable.getMaxDamage())
-			{
-				return false;
-			}
+			return true;
 		}
-		else if (hasDamage() || hasMaxDamage())
+		if (o1 == null)
 		{
-			return false;
+			return isDefaultValue(o2);
 		}
-		if (obj instanceof Repairable repairable)
+		if (o2 == null)
 		{
-			if (hasRepairCost() != repairable.hasRepairCost() || hasRepairCost() && getRepairCost() != repairable.getRepairCost())
-			{
-				return false;
-			}
+			return isDefaultValue(o1);
 		}
-		else if (hasRepairCost())
-		{
-			return false;
-		}
+		return Objects.equals(o1, o2);
+	}
 
-		return isDisplayNameEqual(meta)
-				&& isLoreEquals(meta)
-				&& isUnbreakable() == meta.isUnbreakable()
-				&& isHideTooltip() == meta.isHideTooltip()
-				&& isFireResistant() == meta.isFireResistant()
-				&& Objects.equals(getEnchants(), meta.getEnchants())
-				&& Objects.equals(hasMaxStackSize(), meta.hasMaxStackSize())
-				&& (!hasMaxStackSize() || Objects.equals(getMaxStackSize(), meta.getMaxStackSize()))
-				&& Objects.equals(hasCustomModelData(), meta.hasCustomModelData())
-				&& (!hasCustomModelData() || Objects.equals(getCustomModelData(), meta.getCustomModelData()))
-				&& Objects.equals(hasEnchantmentGlintOverride(), meta.hasEnchantmentGlintOverride())
-				&& (!hasEnchantmentGlintOverride() || Objects.equals(getEnchantmentGlintOverride(), meta.getEnchantmentGlintOverride()))
-				&& Objects.equals(hasRarity(), meta.hasRarity())
-				&& (!hasRarity() || Objects.equals(getRarity(), meta.getRarity()))
-				&& Objects.equals(hasEnchantable(), meta.hasEnchantable())
-				&& (!hasEnchantable() || Objects.equals(getEnchantable(), meta.getEnchantable()))
-				&& Objects.equals(hasAttributeModifiers(), meta.hasAttributeModifiers())
-				&& (!hasAttributeModifiers() || Objects.equals(getAttributeModifiers(), meta.getAttributeModifiers()))
-				&& Objects.equals(getItemFlags(), meta.getItemFlags())
-				&& Objects.equals(getPersistentDataContainer(), meta.getPersistentDataContainer());
+	private boolean isDefaultValue(@Nullable Object obj)
+	{
+		if (obj == null)
+		{
+			return true;
+		}
+		if (obj instanceof Collection<?> c)
+		{
+			return c.isEmpty();
+		}
+		if (obj instanceof Map<?, ?> m)
+		{
+			return m.isEmpty();
+		}
+		if (obj instanceof Multimap<?, ?> mm)
+		{
+			return mm.isEmpty();
+		}
+		if (obj instanceof PersistentDataContainer pdc)
+		{
+			return pdc.isEmpty();
+		}
+		if (obj instanceof Integer i)
+		{
+			return i == 0;
+		}
+		if (obj instanceof Boolean b)
+		{
+			return !b;
+		}
+		if (obj instanceof org.bukkit.inventory.ItemRarity r)
+		{
+			return r == org.bukkit.inventory.ItemRarity.COMMON;
+		}
+		return false;
 	}
 
 	@Override
-	@SuppressWarnings({"MethodDoesntCallSuperMethod", "java:S2975", "java:S1182"})
-	public ItemMetaMock clone()
+	@SuppressWarnings(
+	{"MethodDoesntCallSuperMethod", "java:S2975", "java:S1182"})
+	public @NotNull ItemMetaMock clone()
 	{
 		return new ItemMetaMock(this);
 	}
 
 	@Override
-	@Deprecated(forRemoval = true, since = "1.13")
-	public Set<Material> getCanDestroy()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.13")
-	public void setCanDestroy(Set<Material> set)
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.13")
-	public Set<Material> getCanPlaceOn()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.13")
-	public void setCanPlaceOn(Set<Material> set)
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.20.6")
-	public @NotNull Set<com.destroystokyo.paper.Namespaced> getDestroyableKeys()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.20.6")
-	public void setDestroyableKeys(@NotNull Collection<com.destroystokyo.paper.Namespaced> collection)
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.20.6")
-	public @NotNull Set<com.destroystokyo.paper.Namespaced> getPlaceableKeys()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.20.6")
-	public void setPlaceableKeys(@NotNull Collection<com.destroystokyo.paper.Namespaced> collection)
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.20.6")
-	public boolean hasPlaceableKeys()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	@Deprecated(forRemoval = true, since = "1.20.6")
-	public boolean hasDestroyableKeys()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
 	public boolean hasLore()
 	{
-		return this.lore != null && !lore.isEmpty();
+		return this.loreData != null && !this.loreData.isEmpty();
 	}
 
 	@Override
-	public @Nullable List<Component> lore()
+	@Nullable
+	public List<Component> lore()
 	{
-		return this.lore == null ? null : new ArrayList<>(this.lore.stream()
-				.map(s -> GsonComponentSerializer.gson().deserialize(s))
-				.toList());
+		return this.loreData == null
+				? null
+				: new ArrayList<>(
+						this.loreData.stream().map(s -> GsonComponentSerializer.gson().deserialize(s)).toList());
 	}
 
 	@Override
 	public void lore(@Nullable List<? extends Component> lore)
 	{
-		if (lore != null && !lore.isEmpty())
-		{
-			this.lore = new ArrayList<>(lore.stream().map(s -> GsonComponentSerializer.gson().serialize(s)).toList());
-		}
-		else
-		{
-			this.lore = null;
-		}
+		this.loreData = lore == null
+				? null
+				: lore.stream().map(c -> GsonComponentSerializer.gson().serialize(c)).toList();
 	}
 
 	@Override
-	public @Nullable List<String> getLore()
+	@Nullable
+	public List<String> getLore()
 	{
-		return this.lore == null ? null : new ArrayList<>(this.lore.stream()
-				.map(s -> LegacyComponentSerializer
-						.legacySection()
-						.serialize(GsonComponentSerializer.gson().deserialize(s)))
-				.toList());
+		return this.loreData == null
+				? null
+				: new ArrayList<>(this.loreData.stream().map(s -> LegacyComponentSerializer.legacySection()
+						.serialize(GsonComponentSerializer.gson().deserialize(s))).toList());
 	}
 
 	@Override
-	public @Nullable List<BaseComponent[]> getLoreComponents()
+	@Nullable
+	public List<BaseComponent[]> getLoreComponents()
 	{
-		return this.lore == null ? null : this.lore.stream()
-				.map(c -> BungeeComponentSerializer
-						.get()
-						.serialize(GsonComponentSerializer.gson().deserialize(c))
-				).toList();
+		return this.loreData == null
+				? null
+				: this.loreData.stream().map(
+						c -> BungeeComponentSerializer.get().serialize(GsonComponentSerializer.gson().deserialize(c)))
+						.toList();
 	}
 
 	@Override
 	public void setLore(@Nullable List<String> lore)
 	{
-		if (lore != null && !lore.isEmpty())
-		{
-			this.lore = lore.stream().map(s -> GsonComponentSerializer.gson().serialize(LegacyComponentSerializer.legacySection().deserialize(s).asComponent())).collect(Collectors.toList());
-		}
-		else
-		{
-			this.lore = null;
-		}
+		this.loreData = lore == null
+				? null
+				: lore.stream().map(s -> GsonComponentSerializer.gson()
+						.serialize(LegacyComponentSerializer.legacySection().deserialize(s))).toList();
 	}
 
 	@Override
@@ -584,84 +644,122 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	/**
 	 * Asserts if the lore contains the given lines in order.
 	 *
-	 * @param lines The lines the lore should contain
+	 * @param lines
+	 *            The lines the lore should contain
 	 */
-	@Deprecated(forRemoval = true)
-	public void assertLore(@NotNull List<String> lines)
-	{
-		assertComponentLore(lines.stream().map(s -> LegacyComponentSerializer.legacySection().deserialize(s).asComponent()).toList());
-	}
-
-	/**
-	 * Asserts if the lore contains the given lines in order.
-	 *
-	 * @param lines The lines the lore should contain
-	 */
-	@Deprecated(forRemoval = true)
 	public void assertComponentLore(@NotNull List<? extends Component> lines)
 	{
-		if (this.lore == null)
+		if (this.loreData == null)
 		{
 			throw new AssertionError("No lore was set");
 		}
-		if (this.lore.size() != lines.size())
+		if (this.loreData.size() != lines.size())
 		{
-			throw new AssertionError("Lore size mismatch: expected " + lines.size() + " but was " + this.lore.size());
+			throw new AssertionError(
+					"Lore size mismatch: expected " + lines.size() + " but was " + this.loreData.size());
 		}
-		for (int i = 0; i < this.lore.size(); i++)
+		for (int i = 0; i < this.loreData.size(); i++)
 		{
-			if (GsonComponentSerializer.gson().deserialize(this.lore.get(i)).equals(lines.get(i)))
+			if (GsonComponentSerializer.gson().deserialize(this.loreData.get(i)).equals(lines.get(i)))
 			{
 				continue;
 			}
-			throw new AssertionError(String.format("Line %d should be '%s' but was '%s'", i, lines.get(i), this.lore.get(i)));
+			throw new AssertionError(
+					String.format("Line %d should be '%s' but was '%s'", i, lines.get(i), this.loreData.get(i)));
 		}
 	}
 
 	/**
-	 * Asserts if the lore contains the given lines in order.
-	 *
-	 * @param lines The lines the lore should contain
+	 * @deprecated Component-based lore should be used instead.
 	 */
-	@Deprecated(forRemoval = true)
-	public void assertLore(String... lines)
+	@Deprecated(forRemoval = true, since = "4.0.0")
+	@SuppressWarnings("java:S1133")
+	public void assertLore(@NotNull String... lines)
 	{
 		assertLore(Arrays.asList(lines));
 	}
 
 	/**
-	 * Asserts that the item meta contains no lore.
-	 *
-	 * @throws AssertionError if the item meta contains some lore.
+	 * @deprecated Component-based lore should be used instead.
 	 */
-	@Deprecated(forRemoval = true)
-	public void assertHasNoLore() throws AssertionError
+	@Deprecated(forRemoval = true, since = "4.0.0")
+	@SuppressWarnings("java:S1133")
+	public void assertLore(@NotNull List<String> lines)
 	{
-		if (hasLore())
+		if (this.loreData == null)
 		{
-			throw new AssertionError("Lore was set but shouldn't have been set");
+			throw new AssertionError("No lore was set");
+		}
+		if (this.loreData.size() != lines.size())
+		{
+			throw new AssertionError(
+					"Lore size mismatch: expected " + lines.size() + " but was " + this.loreData.size());
+		}
+		for (int i = 0; i < this.loreData.size(); i++)
+		{
+			String line = LegacyComponentSerializer.legacySection()
+					.serialize(GsonComponentSerializer.gson().deserialize(this.loreData.get(i)));
+			if (line.equals(lines.get(i)))
+			{
+				continue;
+			}
+			throw new AssertionError(String.format("Line %d should be '%s' but was '%s'", i, lines.get(i), line));
 		}
 	}
 
 	/**
-	 * Serializes the properties of an ItemMetaMock to a HashMap.
-	 * Unimplemented properties are not present in the map.
+	 * @deprecated Component-based lore should be used instead.
+	 */
+	@Deprecated(forRemoval = true, since = "4.0.0")
+	@SuppressWarnings("java:S1133")
+	public void assertHasLore()
+	{
+		if (this.loreData == null || this.loreData.isEmpty())
+		{
+			throw new AssertionError("Lore was not set");
+		}
+	}
+
+	/**
+	 * @deprecated Component-based lore should be used instead.
+	 */
+	@Deprecated(forRemoval = true, since = "4.0.0")
+	@SuppressWarnings("java:S1133")
+	public void assertHasNoLore()
+	{
+		if (this.loreData != null && !this.loreData.isEmpty())
+		{
+			throw new AssertionError("Lore was set");
+		}
+	}
+
+	/**
+	 * Serializes the properties of an ItemMetaMock to a HashMap. Unimplemented
+	 * properties are not present in the map.
 	 *
 	 * @return A HashMap of String, Object pairs representing the ItemMetaMock.
 	 */
 	@Override
-	public @NotNull Map<String, Object> serialize()
+	@NotNull
+	public Map<String, Object> serialize()
 	{
 		// Make new map and add relevant properties to it.
 		Map<String, Object> map = new HashMap<>();
+		serializeBasicMeta(map);
+		serializeAdvancedMeta(map);
+		serializeComponents(map);
+		return map;
+	}
 
+	private void serializeBasicMeta(@NotNull Map<String, Object> map)
+	{
 		if (this.hasDisplayName())
 		{
 			map.put(DISPLAY_NAME, toComponentString(this.displayName()));
 		}
 		if (this.hasLore())
 		{
-			map.put(LORE, this.lore().stream().map(ItemMetaMock::toComponentString).toList());
+			map.put(LORE_KEY, this.lore().stream().map(ItemMetaMock::toComponentString).toList());
 		}
 		if (this.hasDamage())
 		{
@@ -692,6 +790,10 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		{
 			map.put(PUBLIC_BUKKIT_VALUES, this.persistentDataContainer.serialize());
 		}
+	}
+
+	private void serializeAdvancedMeta(@NotNull Map<String, Object> map)
+	{
 		if (this.hasTooltipStyle())
 		{
 			map.put(TOOL_TIP_STYLE, this.getTooltipStyle().asString());
@@ -736,6 +838,10 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		{
 			map.put(RARITY, this.getRarity());
 		}
+	}
+
+	private void serializeComponents(@NotNull Map<String, Object> map)
+	{
 		if (this.hasUseRemainder())
 		{
 			map.put(USE_REMAINDER, this.getUseRemainder().serialize());
@@ -772,30 +878,21 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		{
 			map.put(BLOCK_DATA, this.getBlockData());
 		}
-
-		/* Not implemented.
-		if (!this.customTagContainer.isEmpty())
-		{
-			map.put("customTagContainer", this.customTagContainer);
-		}
-		*/
-
 		map.put(META_TYPE, getTypeName());
-
-		// Return map
-		return map;
 	}
 
 	/**
 	 * Required method for Bukkit deserialization.
 	 *
-	 * @param args A serialized ItemMetaMock object in a Map&lt;String, Object&gt; format.
+	 * @param args
+	 *            A serialized ItemMetaMock object in a Map&lt;String, Object&gt;
+	 *            format.
 	 * @return A new instance of the ItemMetaMock class.
 	 */
-	public static @NotNull ItemMetaMock deserialize(@NotNull Map<String, Object> args)
+	@NotNull
+	public static ItemMetaMock deserialize(@NotNull Map<String, Object> args)
 	{
 		ItemMetaMock serialMock = new ItemMetaMock();
-
 		serialMock.deserializeInternal(args);
 		return serialMock;
 	}
@@ -804,40 +901,39 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@ApiStatus.Internal
 	protected void deserializeInternal(@NotNull Map<String, Object> args)
 	{
-		@Nullable Component displayName = NbtParser.parseComponent(args.get(DISPLAY_NAME));
+		@Nullable
+		Component displayName = NbtParser.parseComponent(args.get(DISPLAY_NAME));
 		if (displayName != null)
 		{
 			displayName(displayName);
 		}
-
-		@Nullable Component itemName = NbtParser.parseComponent(args.get(ITEM_NAME));
+		@Nullable
+		Component itemName = NbtParser.parseComponent(args.get(ITEM_NAME));
 		if (itemName != null)
 		{
 			itemName(itemName);
 		}
-
-		@Nullable List<@Nullable Component> loreList = NbtParser.parseList(args.get(LORE), NbtParser::parseComponent);
+		@Nullable
+		List<@Nullable Component> loreList = NbtParser.parseList(args.get(LORE_KEY), NbtParser::parseComponent);
 		if (loreList != null)
 		{
 			lore(loreList);
 		}
-
-		customModelData = NbtParser.parseInteger(args.get(CUSTOM_MODEL_DATA));
-		enchantable = NbtParser.parseInteger(args.get(ENCHANTABLE));
-		damage = NbtParser.parseInteger(args.get(DAMAGE));
+		customModelDataData = NbtParser.parseInteger(args.get(CUSTOM_MODEL_DATA));
+		enchantableData = NbtParser.parseInteger(args.get(ENCHANTABLE));
+		damageData = NbtParser.parseInteger(args.get(DAMAGE));
 		maxDamage = NbtParser.parseInteger(args.get(MAX_DAMAGE));
 		repairCost = NbtParser.parseInteger(args.get(REPAIR_COST), 0);
 		tooltipStyle = NbtParser.parseNamespacedKey(args.get(TOOL_TIP_STYLE));
 		itemModel = NbtParser.parseNamespacedKey(args.get(ITEM_MODEL));
-		unbreakable = NbtParser.parseBoolean(args.get(UNBREAKABLE), false);
+		unbreakableData = NbtParser.parseBoolean(args.get(UNBREAKABLE), false);
 		hideTooltip = NbtParser.parseBoolean(args.get(HIDE_TOOLTIP), false);
 		fireResistant = NbtParser.parseBoolean(args.get(FIRE_RESISTANT), false);
-		maxStackSize = NbtParser.parseInteger(args.get(MAX_STACK_SIZE));
+		maxStackSizeData = NbtParser.parseInteger(args.get(MAX_STACK_SIZE));
 		enchantmentGlintOverride = NbtParser.parseBoolean(args.get(ENCHANTMENT_GLINT_OVERRIDE));
-		glider = NbtParser.parseBoolean(args.get(GLIDER), false);
-		rarity = NbtParser.parseEnum(args.get(RARITY), ItemRarity.class);
+		gliderData = NbtParser.parseBoolean(args.get(GLIDER), false);
+		rarityData = NbtParser.parseEnum(args.get(RARITY), ItemRarity.class);
 		damageResistant = NbtParser.parseNamespacedKey(args.get(DAMAGE_RESISTANT));
-
 		enchants = new HashMap<>();
 		Map<String, Integer> enchantMap = NbtParser.parseMap(args.get(ENCHANTMENTS), NbtParser::parseInteger);
 		if (enchantMap != null)
@@ -862,30 +958,98 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		{
 			persistentDataContainer = PersistentDataContainerMock.deserialize(map);
 		}
-
 		var useRemainderData = NbtParser.parseMap(args.get(USE_REMAINDER), Function.identity());
-		useRemainder = (useRemainderData == null ? null : ItemStack.deserialize(useRemainderData));
+		useRemainder = (useRemainderData == null ? null : Bukkit.getUnsafe().deserializeStack(useRemainderData));
 	}
 
+	/**
+	 * @deprecated Legacy method.
+	 */
 	@Override
 	@Deprecated(forRemoval = true, since = "1.20.6")
+	@SuppressWarnings("java:S1133")
 	public boolean hasLocalizedName()
 	{
-		return false;
+		return hasDisplayName();
 	}
 
+	/**
+	 * @deprecated Legacy method.
+	 */
 	@Override
 	@Deprecated(forRemoval = true, since = "1.20.6")
-	public @NotNull String getLocalizedName()
+	@SuppressWarnings("java:S1133")
+	public String getLocalizedName()
 	{
 		return getDisplayName();
 	}
 
+	/**
+	 * @deprecated Legacy method.
+	 */
 	@Override
 	@Deprecated(forRemoval = true, since = "1.20.6")
-	public void setLocalizedName(@Nullable String name)
+	@SuppressWarnings("java:S1133")
+	public void setLocalizedName(String name)
 	{
-		// no-op
+		setDisplayName(name);
+	}
+
+	/**
+	 * @deprecated Legacy method.
+	 */
+	@Override
+	@Deprecated(forRemoval = true, since = "1.20.6")
+	@SuppressWarnings("java:S1133")
+	public boolean hasCustomModelData()
+	{
+		return this.customModelDataData != null;
+	}
+
+	/**
+	 * @deprecated Legacy method.
+	 */
+	@Override
+	@Deprecated(forRemoval = true, since = "1.20.6")
+	@SuppressWarnings("java:S1133")
+	public int getCustomModelData()
+	{
+		Preconditions.checkState(hasCustomModelData(),
+				"We don't have CustomModelData! Check hasCustomModelData first!");
+		return this.customModelDataData;
+	}
+
+	/**
+	 * @deprecated Legacy method.
+	 */
+	@Override
+	@Deprecated(forRemoval = true, since = "1.20.6")
+	@SuppressWarnings("java:S1133")
+	public void setCustomModelData(Integer data)
+	{
+		this.customModelDataData = data;
+	}
+
+	/**
+	 * @deprecated Legacy method.
+	 */
+	@Override
+	@Deprecated(forRemoval = true, since = "1.20.6")
+	@SuppressWarnings("java:S1133")
+	public boolean hasPlaceableKeys()
+	{
+		return false;
+	}
+
+	/**
+	 * @deprecated Legacy method.
+	 */
+	@Override
+	@Deprecated(forRemoval = true, since = "1.20.6")
+	@SuppressWarnings("java:S1133")
+	public boolean hasDestroyableKeys()
+	{
+		return false;
 	}
 
 	@Override
@@ -907,11 +1071,12 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @NotNull Map<Enchantment, Integer> getEnchants()
+	@NotNull
+	public Map<Enchantment, Integer> getEnchants()
 	{
-		return !enchants.isEmpty() ? ImmutableSortedMap.copyOf(enchants,
-				Comparator.comparing(o -> o.getKey().toString())
-		) : ImmutableMap.of();
+		return !enchants.isEmpty()
+				? ImmutableSortedMap.copyOf(enchants, Comparator.comparing(o -> o.getKey().toString()))
+				: ImmutableMap.of();
 	}
 
 	@Override
@@ -920,15 +1085,14 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		Integer existingLevel = this.enchants.get(ench);
 		if (nonNull(existingLevel) && existingLevel.equals(level))
 		{
-			return false; // Already exists with the same level
+			// Already exists with the same level
+			return false;
 		}
-
 		if (ignoreLevelRestriction || (level >= ench.getStartLevel() && level <= ench.getMaxLevel()))
 		{
 			this.enchants.put(ench, level);
 			return true;
-		}
-		else
+		} else
 		{
 			return false;
 		}
@@ -965,7 +1129,8 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @NotNull Set<ItemFlag> getItemFlags()
+	@NotNull
+	public Set<ItemFlag> getItemFlags()
 	{
 		return Set.copyOf(hideFlags);
 	}
@@ -979,44 +1144,44 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public boolean isUnbreakable()
 	{
-		return unbreakable;
+		return unbreakableData;
 	}
 
 	@Override
 	public void setUnbreakable(boolean unbreakable)
 	{
-		this.unbreakable = unbreakable;
+		this.unbreakableData = unbreakable;
 	}
 
 	@Override
 	public boolean hasDamage()
 	{
-		return damage != null && damage > 0;
+		return damageData != null && damageData > 0;
 	}
 
 	@Override
 	public int getDamage()
 	{
-		return damage == null ? 0 : damage;
+		return damageData == null ? 0 : damageData;
 	}
 
 	@Override
 	public void setDamage(int damage)
 	{
 		Preconditions.checkState(damage >= 0, "damage cannot be negative");
-		this.damage = damage;
+		this.damageData = damage;
 	}
 
 	@Override
 	public boolean hasDamageValue()
 	{
-		return damage != null;
+		return damageData != null;
 	}
 
 	@Override
 	public void resetDamage()
 	{
-		this.damage = null;
+		this.damageData = null;
 	}
 
 	@Override
@@ -1046,9 +1211,7 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public Multimap<Attribute, AttributeModifier> getAttributeModifiers()
 	{
-		return this.hasAttributeModifiers()
-				? ImmutableMultimap.copyOf(attributeModifiers)
-				: null;
+		return this.hasAttributeModifiers() ? ImmutableMultimap.copyOf(attributeModifiers) : null;
 	}
 
 	@Override
@@ -1059,30 +1222,26 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 			this.attributeModifiers = LinkedHashMultimap.create();
 			return;
 		}
-
 		this.attributeModifiers.clear();
-
-		attributeModifiers.entries().stream()
-				.filter(entry -> entry.getKey() != null && entry.getValue() != null)
+		attributeModifiers.entries().stream().filter(entry -> entry.getKey() != null && entry.getValue() != null)
 				.forEach(entry -> this.attributeModifiers.put(entry.getKey(), entry.getValue()));
 	}
 
 	@Override
-	public @NotNull Multimap<Attribute, AttributeModifier> getAttributeModifiers(@NotNull EquipmentSlot slot)
+	@NotNull
+	public Multimap<Attribute, AttributeModifier> getAttributeModifiers(@NotNull EquipmentSlot slot)
 	{
 		SetMultimap<Attribute, AttributeModifier> result = LinkedHashMultimap.create();
-
 		this.attributeModifiers.entries().stream()
 				.filter(entry -> entry.getValue().getSlot() != null && entry.getValue().getSlot() == slot)
 				.forEach(entry -> result.put(entry.getKey(), entry.getValue()));
-
 		return result;
 	}
 
 	@Override
 	public Collection<AttributeModifier> getAttributeModifiers(@NotNull Attribute attribute)
 	{
-		Preconditions.checkNotNull(attribute, "Attribute cannot be null");
+		Preconditions.checkNotNull(attribute, ATTRIBUTE_CANNOT_BE_NULL);
 		return this.attributeModifiers.containsKey(attribute)
 				? ImmutableList.copyOf(this.attributeModifiers.get(attribute))
 				: null;
@@ -1091,11 +1250,12 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public boolean addAttributeModifier(@NotNull Attribute attribute, @NotNull AttributeModifier modifier)
 	{
-		Preconditions.checkNotNull(attribute, "Attribute cannot be null");
+		Preconditions.checkNotNull(attribute, ATTRIBUTE_CANNOT_BE_NULL);
 		Preconditions.checkNotNull(modifier, "AttributeModifier cannot be null");
 		for (Map.Entry<Attribute, AttributeModifier> entry : this.attributeModifiers.entries())
 		{
-			Preconditions.checkArgument(!entry.getValue().getKey().equals(modifier.getKey()), "Cannot register AttributeModifier. Modifier is already applied! %s", modifier);
+			Preconditions.checkArgument(!entry.getValue().getKey().equals(modifier.getKey()),
+					"Cannot register AttributeModifier. Modifier is already applied! %s", modifier);
 		}
 		return this.attributeModifiers.put(attribute, modifier);
 	}
@@ -1103,79 +1263,42 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public boolean removeAttributeModifier(@NotNull Attribute attribute)
 	{
-		Preconditions.checkNotNull(attribute, "Attribute cannot be null");
+		Preconditions.checkNotNull(attribute, ATTRIBUTE_CANNOT_BE_NULL);
 		return !this.attributeModifiers.removeAll(attribute).isEmpty();
 	}
 
 	@Override
 	public boolean removeAttributeModifier(@NotNull EquipmentSlot slot)
 	{
-		// Match against null because as of 1.13, AttributeModifiers without a set slot are active in any slot.
-		return this.attributeModifiers.entries().removeIf(entry -> entry.getValue().getSlot() == null || entry.getValue().getSlot() == slot);
+		// Match against null because as of 1.13, AttributeModifiers without a set slot
+		// are active in any slot.
+		return this.attributeModifiers.entries()
+				.removeIf(entry -> entry.getValue().getSlot() == null || entry.getValue().getSlot() == slot);
 	}
 
 	@Override
 	public boolean removeAttributeModifier(@NotNull Attribute attribute, @NotNull AttributeModifier modifier)
 	{
-		Preconditions.checkNotNull(attribute, "Attribute cannot be null");
+		Preconditions.checkNotNull(attribute, ATTRIBUTE_CANNOT_BE_NULL);
 		Preconditions.checkNotNull(modifier, "AttributeModifier cannot be null");
-
-		return this.attributeModifiers.entries().removeIf(entry ->
-				(entry.getKey() == null || entry.getValue() == null) || (entry.getKey() == attribute && entry.getValue().getKey().equals(modifier.getKey()))
-		);
+		return this.attributeModifiers.entries().removeIf(entry -> (entry.getKey() == null || entry.getValue() == null)
+				|| (entry.getKey() == attribute && entry.getValue().getKey().equals(modifier.getKey())));
 	}
 
+	@Override
 	@NotNull
-	@Override
-	public String getAsString()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	public @NotNull String getAsComponentString()
-	{
-		//TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	public @NotNull CustomItemTagContainer getCustomTagContainer()
-	{
-		// This was replaced by PersistentDataContainer!
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	public @NotNull PersistentDataContainer getPersistentDataContainer()
+	public PersistentDataContainer getPersistentDataContainer()
 	{
 		return this.persistentDataContainer;
 	}
 
 	@Override
-	public boolean hasCustomModelData()
+	@NotNull
+	public CustomModelDataComponent getCustomModelDataComponent()
 	{
-		return this.customModelData != null;
-	}
-
-	@Override
-	public int getCustomModelData()
-	{
-		Preconditions.checkState(hasCustomModelData(), "We don't have CustomModelData! Check hasCustomModelData first!");
-		return this.customModelData;
-	}
-
-	@Override
-	public @NotNull CustomModelDataComponent getCustomModelDataComponent()
-	{
-		return this.hasCustomModelDataComponent() ? this.customModelDataComponent : CustomModelDataComponentMock.useDefault();
-	}
-
-	@Override
-	public void setCustomModelData(@Nullable Integer data)
-	{
-		this.customModelData = data;
+		return this.hasCustomModelDataComponent()
+				? this.customModelDataComponent
+				: CustomModelDataComponentMock.useDefault();
 	}
 
 	@Override
@@ -1193,21 +1316,20 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public boolean hasEnchantable()
 	{
-		return this.enchantable != null;
+		return this.enchantableData != null;
 	}
-
 	@Override
 	public int getEnchantable()
 	{
 		Preconditions.checkState(this.hasEnchantable(), "We don't have Enchantable! Check hasEnchantable first!");
-		return this.enchantable;
+		return this.enchantableData;
 	}
-
 	@Override
 	public void setEnchantable(@Nullable Integer data)
 	{
-		Preconditions.checkArgument(data == null || data > 0, "Enchantability must be positive"); // Paper
-		this.enchantable = data;
+		// Paper
+		Preconditions.checkArgument(data == null || data > 0, "Enchantability must be positive");
+		this.enchantableData = data;
 	}
 
 	@Override
@@ -1216,39 +1338,10 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 		// No use yet
 	}
 
+	/**
+	 * @deprecated Use {@link #hasMaxDamage()} instead.
+	 */
 	@Deprecated(since = "1.20")
-	private Set<Material> legacyGetMatsFromKeys(Collection<Namespaced> names)
-	{
-		Set<Material> mats = Sets.newHashSet();
-		for (Namespaced key : names)
-		{
-			if (!(key instanceof org.bukkit.NamespacedKey))
-			{
-				continue;
-			}
-
-			Material material = Material.matchMaterial(key.toString(), false);
-			if (material != null)
-			{
-				mats.add(material);
-			}
-		}
-
-		return mats;
-	}
-
-	@Deprecated(since = "1.20")
-	private void legacyClearAndReplaceKeys(Collection<Namespaced> toUpdate, Collection<Material> beingSet)
-	{
-		if (beingSet.stream().anyMatch(Material::isLegacy))
-		{
-			throw new IllegalArgumentException("Set must not contain any legacy materials!");
-		}
-
-		toUpdate.clear();
-		toUpdate.addAll(beingSet.stream().map(Material::getKey).collect(java.util.stream.Collectors.toSet()));
-	}
-
 	@Override
 	public boolean hasMaxDamage()
 	{
@@ -1271,39 +1364,45 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public boolean hasItemName()
 	{
-		return this.itemName != null;
+		return this.itemNameData != null;
 	}
-
 	@Override
-	public @NotNull Component itemName()
+	@NotNull
+	public Component itemName()
 	{
-		return this.itemName == null ? Component.empty() : this.itemName;
+		return this.itemNameData == null ? Component.empty() : this.itemNameData;
 	}
-
 	@Override
 	public void itemName(@Nullable Component name)
 	{
-		this.itemName = name;
+		this.itemNameData = name;
 	}
 
+	/**
+	 * @deprecated Use {@link #itemName()} instead.
+	 */
 	@Override
-	@Deprecated
-	public @NotNull String getItemName()
+	@Deprecated(since = "1.21", forRemoval = true)
+	@SuppressWarnings("java:S1133")
+	@NotNull
+	public String getItemName()
 	{
 		return LegacyComponentSerializer.legacySection().serialize(itemName());
 	}
-
+	/**
+	 * @deprecated Use {@link #itemName(Component)} instead.
+	 */
 	@Override
-	@Deprecated
+	@Deprecated(since = "1.21", forRemoval = true)
+	@SuppressWarnings("java:S1133")
 	public void setItemName(@Nullable String name)
 	{
 		if (name == null)
 		{
-			this.itemName = null;
-		}
-		else
+			this.itemNameData = null;
+		} else
 		{
-			this.itemName = LegacyComponentSerializer.legacySection().deserialize(name);
+			this.itemNameData = LegacyComponentSerializer.legacySection().deserialize(name);
 		}
 	}
 
@@ -1326,7 +1425,8 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @Nullable NamespacedKey getTooltipStyle()
+	@Nullable
+	public NamespacedKey getTooltipStyle()
 	{
 		return this.tooltipStyle;
 	}
@@ -1344,7 +1444,8 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @Nullable NamespacedKey getItemModel()
+	@Nullable
+	public NamespacedKey getItemModel()
 	{
 		return this.itemModel;
 	}
@@ -1358,13 +1459,12 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public boolean isGlider()
 	{
-		return this.glider;
+		return this.gliderData;
 	}
-
 	@Override
 	public void setGlider(boolean glider)
 	{
-		this.glider = glider;
+		this.gliderData = glider;
 	}
 
 	@Override
@@ -1374,9 +1474,12 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @Nullable Tag<DamageType> getDamageResistant()
+	@Nullable
+	public Tag<DamageType> getDamageResistant()
 	{
-		return this.damageResistant != null ? Bukkit.getTag("damage_types", this.damageResistant, DamageType.class) : null;
+		return this.damageResistant != null
+				? Bukkit.getTag("damage_types", this.damageResistant, DamageType.class)
+				: null;
 	}
 
 	@Override
@@ -1386,27 +1489,14 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @Nullable RegistryKeySet<DamageType> getDamageResistantTypes()
-	{
-		// TODO: Auto generated stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	public void setDamageResistantTypes(@Nullable RegistryKeySet<DamageType> types)
-	{
-		// TODO: Auto generated stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
 	public boolean hasUseRemainder()
 	{
 		return this.useRemainder != null;
 	}
 
 	@Override
-	public @Nullable ItemStack getUseRemainder()
+	@Nullable
+	public ItemStack getUseRemainder()
 	{
 		return this.useRemainder;
 	}
@@ -1443,7 +1533,8 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @NotNull EquippableComponent getEquippable()
+	@NotNull
+	public EquippableComponent getEquippable()
 	{
 		return this.hasEquippable() ? this.equippableComponent : EquippableComponentMock.useDefault();
 	}
@@ -1461,9 +1552,11 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @NotNull Boolean getEnchantmentGlintOverride()
+	@NotNull
+	public Boolean getEnchantmentGlintOverride()
 	{
-		Preconditions.checkState(this.hasEnchantmentGlintOverride(), "We don't have enchantment_glint_override! Check hasEnchantmentGlintOverride first!");
+		Preconditions.checkState(this.hasEnchantmentGlintOverride(),
+				"We don't have enchantment_glint_override! Check hasEnchantmentGlintOverride first!");
 		return this.enchantmentGlintOverride;
 	}
 
@@ -1488,41 +1581,38 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	@Override
 	public boolean hasMaxStackSize()
 	{
-		return this.maxStackSize != null;
+		return this.maxStackSizeData != null;
 	}
-
 	@Override
 	public int getMaxStackSize()
 	{
 		Preconditions.checkState(hasMaxStackSize(), "We don't have max_stack_size! Check hasMaxStackSize first!");
-		return this.maxStackSize;
+		return this.maxStackSizeData;
 	}
-
 	@Override
 	public void setMaxStackSize(@Nullable Integer max)
 	{
 		Preconditions.checkArgument(max == null || max > 0, "max_stack_size must be > 0");
 		Preconditions.checkArgument(max == null || max <= ABSOLUTE_MAX_STACK_SIZE, "max_stack_size must be <= 99");
-		this.maxStackSize = max;
+		this.maxStackSizeData = max;
 	}
 
 	@Override
 	public boolean hasRarity()
 	{
-		return this.rarity != null;
+		return this.rarityData != null;
 	}
-
 	@Override
-	public @NotNull ItemRarity getRarity()
+	@NotNull
+	public ItemRarity getRarity()
 	{
 		Preconditions.checkState(this.hasRarity(), "We don't have rarity! Check hasRarity first!");
-		return this.rarity;
+		return this.rarityData;
 	}
-
 	@Override
 	public void setRarity(@Nullable ItemRarity rarity)
 	{
-		this.rarity = rarity;
+		this.rarityData = rarity;
 	}
 
 	@Override
@@ -1532,7 +1622,8 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @NotNull FoodComponent getFood()
+	@NotNull
+	public FoodComponent getFood()
 	{
 		return this.hasFood() ? this.foodComponent : FoodComponentMock.useDefault();
 	}
@@ -1556,7 +1647,8 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @NotNull ToolComponent getTool()
+	@NotNull
+	public ToolComponent getTool()
 	{
 		return this.hasTool() ? this.toolComponent : ToolComponentMock.useDefault();
 	}
@@ -1574,7 +1666,8 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	}
 
 	@Override
-	public @NotNull JukeboxPlayableComponent getJukeboxPlayable()
+	@NotNull
+	public JukeboxPlayableComponent getJukeboxPlayable()
 	{
 		return this.hasJukeboxPlayable() ? this.jukeboxPlayableComponent : JukeboxPlayableComponentMock.useDefault();
 	}
@@ -1626,7 +1719,8 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	/**
 	 * Set the block data in the item.
 	 *
-	 * @param blockData new block data.
+	 * @param blockData
+	 *            new block data.
 	 */
 	public void setBlockData(@Nullable Map<String, String> blockData)
 	{
@@ -1637,6 +1731,4 @@ public class ItemMetaMock implements ItemMeta, Damageable, Repairable
 	{
 		return GsonComponentSerializer.gson().serialize(component);
 	}
-
 }
-
